Revert "Fix horizontal scrolling caused by scaling on the subscribe CTA h2 (#765)"
This reverts commit 48d06196c290d6a374052d0631898f5a7d216759.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1386,16 +1386,9 @@ Ghost editor. */
     background: var(--color-darkgrey);
 }
 
-/* Increases the default h2 size by 15%, for small and large screens */
 .footer-cta h2 {
     margin: 0 0 30px;
-    font-size: 3.2rem;
-}
-
-@media (max-width: 600px) {
-    .footer-cta h2 {
-        font-size: 2.65rem;
-    }
+    transform: scale(1.15);
 }
 
 .footer-cta-button {
